# TaskTracker

./: CMakeLists.txt  README.md
src/: main.cpp
src/cmd/: cmd.cpp  cmd.hpp
src/controls/: controls.cpp  controls.hpp
src/exception_handling/: exceptions.cpp  exceptions.hpp
src/in_out/: in_out.cpp  in_out.hpp
src/task/base_task/: base_task.cpp  base_task.hpp
src/task/info/: info.cpp  info.hpp
src/task/main_task/: task.cpp  task.hpp
src/task/tasks_list/: tasks_list.cpp  tasks_list.hpp
src/test/: test_main.cpp
src/test/task/: test_base_task.cpp  test_main_task.cpp  test_tasks_list.cpp
